--- a/Poem.html
+++ b/Poem.html
@@ -18,7 +18,43 @@
         </span>
     </Header>
     <br>
-    <h1>Left blank intentionally, waiting for the poem to be made</h1>
+    <h1><span>Dearest Teachers, 
+
+You greet us every morning with a warm smile on your face 
+
+Even though sometimes finishing work can become a race 
+
+You teach us with humour and patience 
+
+And answer all our questions 
+
+You treat every one of us with the same amount of dedication 
+
+You work hard everyday 
+
+Make our fears go away 
+
+You teach us the difference between wrong and right 
+
+You teach us to be helpful, caring and wise 
+
+You help us understand that no matter how dark the night 
+
+The sun will always rise 
+
+In our lives you make a big impact 
+
+We must remember that 
+
+For the dawn of each author, each doctor or king 
+
+Begins with a teacher and the wisdom they bring 
+
+ 
+
+Love and a ton of gratitude, 
+
+Vani Sharma + The Rest of Grade 7E (2021-2022) </span></h1>
     <br><br><br><br><br><br><br>
     <footer>
         <span class= "welcome">
