--- a/Poem.html
+++ b/Poem.html
@@ -18,41 +18,41 @@
         </span>
     </Header>
     <br>
-    <h1><span>Dearest Teachers, 
+    <h1><span>Dearest Teachers, <br>
 
-You greet us every morning with a warm smile on your face 
+You greet us every morning with a warm smile on your face <br>
 
-Even though sometimes finishing work can become a race 
+Even though sometimes finishing work can become a race <br>
 
-You teach us with humour and patience 
+You teach us with humour and patience <br>
 
-And answer all our questions 
+And answer all our questions <br>
 
-You treat every one of us with the same amount of dedication 
+You treat every one of us with the same amount of dedication <br>
 
-You work hard everyday 
+You work hard everyday <br>
 
-Make our fears go away 
+Make our fears go away <br>
 
-You teach us the difference between wrong and right 
+You teach us the difference between wrong and right <br>
 
-You teach us to be helpful, caring and wise 
+You teach us to be helpful, caring and wise <br>
 
-You help us understand that no matter how dark the night 
+You help us understand that no matter how dark the night <br>
 
-The sun will always rise 
+The sun will always rise <br>
 
-In our lives you make a big impact 
+In our lives you make a big impact <br>
 
-We must remember that 
+We must remember that <br>
 
-For the dawn of each author, each doctor or king 
+For the dawn of each author, each doctor or king <br>
 
-Begins with a teacher and the wisdom they bring 
+Begins with a teacher and the wisdom they bring <br>
 
  
 
-Love and a ton of gratitude, 
+Love and a ton of gratitude, <br><br>
 
 Vani Sharma + The Rest of Grade 7E (2021-2022) </span></h1>
     <br><br><br><br><br><br><br>
