--- a/Personal Remarks.html
+++ b/Personal Remarks.html
@@ -19,6 +19,9 @@
     </Header>
     <br>
     <h1><span>Hello everyone! <br>I'm Diya Joshi but my friends call me DJ! I recently joined Podar international and to be honest, <br>I was scared, not because I didn't have the courage to shift schools but because I was scared that everyone would ignore me.<br> I was scared that in an online platform I would never make friends, what if the teachers shout at me? These scary possibilities would dance around my mind. But am I glad to say that just a few hours into my very first <br>lecture all those worries disappeared.<br> Everone was just so nice and friendly! All the teachers would be ready to help me out at anytime of the day. Really, ANYTIME.<br> Once I was stuck on a problem in maths and Jamie ma'am immeadietly helped me, even though it was already 10:00 in the night.<br> I also wanted to thank Nikita ma'am for being so helpfull and freindly. <br>It's always fun when Nikita ma'am is around!</span></h1>
+    <h1></span>Good morning respected teachers. Thank you for continuously inspiring us to do our best. you help us strive for goals, we find guidance, friendship, discipline and love everything, in one person and that person in our stunning teachers and our wonderful role model Dr. Vandana Lulla.
+
+I join when I was just a litlle child,<br> And ma'am has been with me every sec of the journey, right for the time I was learnt to tigh my shoe lace till making web sites she is ultimate motivator and my role model.<br> thanks u ma'am for supporting us and letting us now we are not alone.</span></h1>
     <br><br><br><br><br><br><br>
     <footer>
         <span class= "welcome">
