--- a/Poem.html
+++ b/Poem.html
@@ -12,7 +12,7 @@
         <span class= "welcome">
             <h1>
                 <span class="Hyperlink_Homepage">
-                    <a href="index.html">Happy Teachers Day!</a>
+                    <a href="index.html" class="heading">Happy Teachers Day!</a>
                 </span>
             </h1>
         </span>
