Update and rename Dance or Song or Skit.html to Song.html

--- a/Song.html
+++ b/Song.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Games Menu</title>
+    <title>Song</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,7 +19,7 @@
     </Header>
     <br>
     
-    <iframe width="1360" height="1115" src="https://www.youtube.com/embed/FGGxEKWo7Ok" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="1160" height="915" src="https://www.youtube.com/embed/FGGxEKWo7Ok" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <br><br><br><br><br><br><br>
     <footer>
         <span class= "welcome">
