--- a/Song.html
+++ b/Song.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Song</title>
     <link rel="stylesheet" href="style.css">
+        <style>
+        .song {
+            width: 50% !important;
+            height: auto !important;
+            margin: 0 auto;
+            display: block;
+        }
+    </style>
 </head>
 <body>
     <Header>
@@ -19,7 +27,7 @@
     </Header>
     <br>
     
-    <iframe width="1160" height="815" src="https://www.youtube.com/embed/FGGxEKWo7Ok" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="1160" height="815" class="song"src="https://www.youtube.com/embed/FGGxEKWo7Ok" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <br><br><br><br><br><br><br>
     <footer>
         <span class= "welcome">
