--- a/Song.html
+++ b/Song.html
@@ -9,7 +9,7 @@
         <style>
         .song {
             width: 100% !important;
-            height: auto !important;
+            height: 100% !important;
         }
     </style>
 </head>
