--- a/Song.html
+++ b/Song.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="style.css">
         <style>
         .song {
-            width: 90% !important;
-            height: 90% !important;
+            width: 50% !important;
+            height: auto !important;
+            margin: 0 auto;
+            display: block;
         }
     </style>
 </head>
@@ -25,7 +27,7 @@
     </Header>
     <br>
     
-    <iframe width="1160" height="815" class="song"src="https://www.youtube.com/embed/FGGxEKWo7Ok" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" class="song"src="https://www.youtube.com/embed/FGGxEKWo7Ok" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <br><br><br><br><br><br><br>
     <footer>
         <span class= "welcome">
