--- a/Song.html
+++ b/Song.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="style.css">
         <style>
         .song {
-            width: 100% !important;
-            height: auto !important;
+            width: 50% !important;
+            height: 50% !important;
             margin: 0 auto;
             display: block;
         }
