--- a/Song.html
+++ b/Song.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="style.css">
         <style>
         .song {
-            width: 60% !important;
-            height: 100% !important;
+            margin: 0 auto;
+            display: block;
         }
     </style>
 </head>
