--- a/Games Menu.html
+++ b/Games Menu.html
@@ -18,7 +18,7 @@
         </span>
     </Header>
     <br>
-    <h1>Left blank intentionally, waiting for the games to be decided and made</h1>
+    <h1>Guess The Teacher!<br><a href="https://planet.mblock.cc/project/projectshare/1059230">Click here</a> or click copy paste the following link to play! <br>https://planet.mblock.cc/project/projectshare/1059230</h1>
     <br><br><br><br><br><br><br>
     <footer>
         <span class= "welcome">
