--- a/Games Menu.html
+++ b/Games Menu.html
@@ -18,7 +18,7 @@
         </span>
     </Header>
     <br>
-    <h1>Guess The Teacher!<br><br><a href="https://planet.mblock.cc/project/projectshare/1059230">Click here</a> or copy paste the following link to play! <br>https://planet.mblock.cc/project/projectshare/1059230</h1>
+    <h1>Guess The Disney Song!<br><br><a href="https://planet.mblock.cc/project/projectshare/1059230">Click here</a> or copy paste the following link to play! <br>https://planet.mblock.cc/project/projectshare/1059230</h1>
     <br><br><br><br>
     <h1>Guess The Teacher!<br><br><a href="https://planet.mblock.cc/project/1058937">Click here</a> or copy paste the following link to play! <br>https://planet.mblock.cc/project/1058937</h1>
     <br><br><br><br><br><br><br>
