--- a/Song.html
+++ b/Song.html
@@ -26,7 +26,7 @@
     <br>
     
     <iframe width="560" height="615" class="song"src="https://www.youtube.com/embed/FGGxEKWo7Ok" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <a href="index.html">Happy Teachers Day!</a>
+    <a href="https://www.youtube.com/watch?v=FGGxEKWo7Ok" target="blank">Watch Adya's performance on Youtube!</a>
     <br><br><br>
     <footer>
         <span class= "welcome">
