--- a/Personal Remarks.html
+++ b/Personal Remarks.html
@@ -19,9 +19,10 @@
     </Header>
     <br>
     <h1><span>Hello everyone! <br>I'm Diya Joshi but my friends call me DJ! I recently joined Podar international. All the teachers would be ready to help me out at anytime of the day. Really, ANYTIME.<br> Once I was stuck on a problem in maths and Jamie ma'am immeadietly helped me, even though it was already 10:00 in the night.<br> I also wanted to thank Nikita ma'am for being so helpfull and freindly. <br>It's always fun when Nikita ma'am is around!</span></h1>
-    <h1></span><br>Good morning. Thank you for continuously inspiring us to do our best. you help us strive for goals, we find guidance, friendship, discipline and love everything, in one person and that person in our stunning teachers and our wonderful role model Dr. Vandana Lulla.</span></h1>
-    <h1><br>on one monday morning in the second grade, a child tried to bully me but i bullied him before that because i didnt want to get hurt, the teacher caught me and taught me not to bully others, but to complain to the teacher</span>.</span></h1>
-    <br><br><br><br><br><br><br>
+    <h1></span><br>Good morning. Thank you for continuously inspiring us to do our best. you help us strive for goals, we find guidance, friendship, discipline and love everything, in one person and that person in our stunning teachers and our wonderful role model Dr. Vandana Lulla. - Poshika</span></h1>
+    <h1><br>on one monday morning in the second grade, a child tried to bully me but i bullied him before that because i didnt want to get hurt, the teacher caught me and taught me not to bully others, but to complain to the teacher</span>. - Arsh</span></h1>
+    <h1><br> When i first came to school in 1st grade i used to be scared that what will happen no one will like me but all the teachers made it such a comfortable space for us more likely like our 2nd home.When ever i was sick the teachers always took care of me. i have made some amazing memories at podar and continue to make some more - Saisha</span>.</span></h1>
+<br><br><br><br><br><br><br>
     <footer>
         <span class= "welcome">
             <h1>
